# extapi

./: .editorconfig  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: actions.yaml
examples/: demo.py
extapi/: _helpers.py  _meta.py
extapi/http/: abc.py  base.py  types.py
extapi/http/addons/: auth.py  headers.py  log.py  retry.py  status.py
extapi/http/backends/: aiohttp.py  httpx.py
extapi/http/executors/: limiters.py  metrics.py  retry.py  trace.py  wrapped.py
extapi/http/metrics/: container.py  helpers.py
extapi/limiters/concurrency/: abc.py  local.py
extapi/limiters/rps/: abc.py  local.py
tests/: _test_demo.py  conftest.py  test_demo.py
tests/addons/: test_headers.py  test_retry.py
tests/exthttp/: _helpers.py  test_abstract.py  test_types.py
tests/exthttp/addons/: test_auth.py  test_headers.py  test_retry.py  test_status.py
tests/exthttp/backends/: test_aiohttp.py  test_httpx.py
tests/exthttp/executors/: test_retry.py  test_trace.py  test_wrapped.py
tests/limiters/rps/: test_limiters_local.py
